cmake_minimum_required(VERSION 3.15)
project(notify)

set(CMAKE_CXX_STANDARD 14)

include_directories(curl/include)
include_directories(curl/include/curl)
include_directories(curl/include/mbedtls)
include_directories(curl/include/nghttp2)
include_directories(curl/include/openssl)
include_directories(WpdPack/Include)
include_directories(WpdPack/Include/pcap)

add_executable(notify
        curl/include/curl/curl.h
        curl/include/curl/curlver.h
        curl/include/curl/easy.h
        curl/include/curl/mprintf.h
        curl/include/curl/multi.h
        curl/include/curl/stdcheaders.h
        curl/include/curl/system.h
        curl/include/curl/typecheck-gcc.h
        curl/include/mbedtls/aes.h
        curl/include/mbedtls/aesni.h
        curl/include/mbedtls/arc4.h
        curl/include/mbedtls/aria.h
        curl/include/mbedtls/asn1.h
        curl/include/mbedtls/asn1write.h
        curl/include/mbedtls/base64.h
        curl/include/mbedtls/bignum.h
        curl/include/mbedtls/blowfish.h
        curl/include/mbedtls/bn_mul.h
        curl/include/mbedtls/camellia.h
        curl/include/mbedtls/ccm.h
        curl/include/mbedtls/certs.h
        curl/include/mbedtls/chacha20.h
        curl/include/mbedtls/chachapoly.h
        curl/include/mbedtls/check_config.h
        curl/include/mbedtls/cipher.h
        curl/include/mbedtls/cipher_internal.h
        curl/include/mbedtls/cmac.h
        curl/include/mbedtls/compat-1.3.h
        curl/include/mbedtls/config.h
        curl/include/mbedtls/ctr_drbg.h
        curl/include/mbedtls/debug.h
        curl/include/mbedtls/des.h
        curl/include/mbedtls/dhm.h
        curl/include/mbedtls/ecdh.h
        curl/include/mbedtls/ecdsa.h
        curl/include/mbedtls/ecjpake.h
        curl/include/mbedtls/ecp.h
        curl/include/mbedtls/ecp_internal.h
        curl/include/mbedtls/entropy.h
        curl/include/mbedtls/entropy_poll.h
        curl/include/mbedtls/error.h
        curl/include/mbedtls/gcm.h
        curl/include/mbedtls/havege.h
        curl/include/mbedtls/hkdf.h
        curl/include/mbedtls/hmac_drbg.h
        curl/include/mbedtls/md.h
        curl/include/mbedtls/md2.h
        curl/include/mbedtls/md4.h
        curl/include/mbedtls/md5.h
        curl/include/mbedtls/md_internal.h
        curl/include/mbedtls/memory_buffer_alloc.h
        curl/include/mbedtls/net.h
        curl/include/mbedtls/net_sockets.h
        curl/include/mbedtls/nist_kw.h
        curl/include/mbedtls/oid.h
        curl/include/mbedtls/padlock.h
        curl/include/mbedtls/pem.h
        curl/include/mbedtls/pk.h
        curl/include/mbedtls/pk_internal.h
        curl/include/mbedtls/pkcs11.h
        curl/include/mbedtls/pkcs12.h
        curl/include/mbedtls/pkcs5.h
        curl/include/mbedtls/platform.h
        curl/include/mbedtls/platform_time.h
        curl/include/mbedtls/platform_util.h
        curl/include/mbedtls/poly1305.h
        curl/include/mbedtls/psa_util.h
        curl/include/mbedtls/ripemd160.h
        curl/include/mbedtls/rsa.h
        curl/include/mbedtls/rsa_internal.h
        curl/include/mbedtls/sha1.h
        curl/include/mbedtls/sha256.h
        curl/include/mbedtls/sha512.h
        curl/include/mbedtls/ssl.h
        curl/include/mbedtls/ssl_cache.h
        curl/include/mbedtls/ssl_ciphersuites.h
        curl/include/mbedtls/ssl_cookie.h
        curl/include/mbedtls/ssl_internal.h
        curl/include/mbedtls/ssl_ticket.h
        curl/include/mbedtls/threading.h
        curl/include/mbedtls/timing.h
        curl/include/mbedtls/version.h
        curl/include/mbedtls/x509.h
        curl/include/mbedtls/x509_crl.h
        curl/include/mbedtls/x509_crt.h
        curl/include/mbedtls/x509_csr.h
        curl/include/mbedtls/xtea.h
        curl/include/nghttp2/nghttp2.h
        curl/include/nghttp2/nghttp2ver.h
        curl/include/openssl/aes.h
        curl/include/openssl/applink.c
        curl/include/openssl/asn1.h
        curl/include/openssl/asn1_mac.h
        curl/include/openssl/asn1t.h
        curl/include/openssl/bio.h
        curl/include/openssl/blowfish.h
        curl/include/openssl/bn.h
        curl/include/openssl/buffer.h
        curl/include/openssl/camellia.h
        curl/include/openssl/cast.h
        curl/include/openssl/cmac.h
        curl/include/openssl/cms.h
        curl/include/openssl/comp.h
        curl/include/openssl/conf.h
        curl/include/openssl/conf_api.h
        curl/include/openssl/crypto.h
        curl/include/openssl/des.h
        curl/include/openssl/des_old.h
        curl/include/openssl/dh.h
        curl/include/openssl/dsa.h
        curl/include/openssl/dso.h
        curl/include/openssl/dtls1.h
        curl/include/openssl/e_os2.h
        curl/include/openssl/ebcdic.h
        curl/include/openssl/ec.h
        curl/include/openssl/ecdh.h
        curl/include/openssl/ecdsa.h
        curl/include/openssl/engine.h
        curl/include/openssl/err.h
        curl/include/openssl/evp.h
        curl/include/openssl/hmac.h
        curl/include/openssl/idea.h
        curl/include/openssl/krb5_asn.h
        curl/include/openssl/kssl.h
        curl/include/openssl/lhash.h
        curl/include/openssl/md4.h
        curl/include/openssl/md5.h
        curl/include/openssl/mdc2.h
        curl/include/openssl/modes.h
        curl/include/openssl/obj_mac.h
        curl/include/openssl/objects.h
        curl/include/openssl/ocsp.h
        curl/include/openssl/opensslconf.h
        curl/include/openssl/opensslv.h
        curl/include/openssl/ossl_typ.h
        curl/include/openssl/pem.h
        curl/include/openssl/pem2.h
        curl/include/openssl/pkcs12.h
        curl/include/openssl/pkcs7.h
        curl/include/openssl/pqueue.h
        curl/include/openssl/rand.h
        curl/include/openssl/rc2.h
        curl/include/openssl/rc4.h
        curl/include/openssl/ripemd.h
        curl/include/openssl/rsa.h
        curl/include/openssl/safestack.h
        curl/include/openssl/seed.h
        curl/include/openssl/sha.h
        curl/include/openssl/srp.h
        curl/include/openssl/srtp.h
        curl/include/openssl/ssl.h
        curl/include/openssl/ssl2.h
        curl/include/openssl/ssl23.h
        curl/include/openssl/ssl3.h
        curl/include/openssl/stack.h
        curl/include/openssl/symhacks.h
        curl/include/openssl/tls1.h
        curl/include/openssl/ts.h
        curl/include/openssl/txt_db.h
        curl/include/openssl/ui.h
        curl/include/openssl/ui_compat.h
        curl/include/openssl/whrlpool.h
        curl/include/openssl/x509.h
        curl/include/openssl/x509_vfy.h
        curl/include/openssl/x509v3.h
        curl/include/libssh2.h
        curl/include/libssh2_publickey.h
        curl/include/libssh2_sftp.h
        curl/include/zconf.h
        curl/include/zlib.h
        WpdPack/Examples-pcap/basic_dump/basic_dump.c
        WpdPack/Examples-pcap/basic_dump_ex/basic_dump_ex.c
        WpdPack/Examples-pcap/iflist/iflist.c
        WpdPack/Examples-pcap/pcap_filter/pcap_filter.c
        WpdPack/Examples-pcap/pktdump_ex/pktdump_ex.c
        WpdPack/Examples-pcap/readfile/readfile.c
        WpdPack/Examples-pcap/readfile_ex/readfile_ex.c
        WpdPack/Examples-pcap/savedump/savedump.c
        WpdPack/Examples-pcap/sendpack/sendpack.c
        WpdPack/Examples-pcap/UDPdump/udpdump.c
        WpdPack/Examples-remote/iflist/iflist.c
        WpdPack/Examples-remote/misc/basic_dump.c
        WpdPack/Examples-remote/misc/basic_dump_ex.c
        WpdPack/Examples-remote/misc/readfile.c
        WpdPack/Examples-remote/misc/readfile_ex.c
        WpdPack/Examples-remote/misc/savedump.c
        WpdPack/Examples-remote/misc/sendpack.c
        WpdPack/Examples-remote/PacketDriver/GetMacAddress/GetMacAddress.c
        WpdPack/Examples-remote/PacketDriver/TestPacketCapture/TestPacketCapture.c
        WpdPack/Examples-remote/PacketDriver/TestPacketSend/TestPacketSend.c
        WpdPack/Examples-remote/pcap_filter/pcap_filter.c
        WpdPack/Examples-remote/pcap_fopen/pcap_fopen.cpp
        WpdPack/Examples-remote/pktdump_ex/pktdump_ex.c
        WpdPack/Examples-remote/sendcap/sendcap.c
        WpdPack/Examples-remote/smp_1/smp_1.c
        WpdPack/Examples-remote/tcptop/tcptop.c
        WpdPack/Examples-remote/UDPdump/udpdump.c
        WpdPack/Examples-remote/UserLevelBridge/UserBridge.c
        WpdPack/Include/pcap/bluetooth.h
        WpdPack/Include/pcap/bpf.h
        WpdPack/Include/pcap/namedb.h
        WpdPack/Include/pcap/pcap.h
        WpdPack/Include/pcap/sll.h
        WpdPack/Include/pcap/usb.h
        WpdPack/Include/pcap/vlan.h
        WpdPack/Include/bittypes.h
        WpdPack/Include/ip6_misc.h
        WpdPack/Include/Packet32.h
        WpdPack/Include/pcap-bpf.h
        WpdPack/Include/pcap-namedb.h
        WpdPack/Include/pcap-stdinc.h
        WpdPack/Include/pcap.h
        WpdPack/Include/remote-ext.h
        WpdPack/Include/Win32-Extensions.h
        main.c)
